Optimising the compilation